--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./style.css" />
-    <title>Korean Clock</title>
+    <title>Hangul clock</title>
   </head>
   <body>
     <div class="container">
